2005-01-22  Marcus Brinkmann  <marcus@gnu.org>

	* ia32/Makefile.am (nobase_include_HEADERS): Add l4/bits/arch.h,
	l4/bits/compat/arch.h, l4/bits/compat.h.
	* ia32/l4/bits/arch.h, ia32/l4/bits/compat/arch.h,
	ia32/l4/bits/gnu/arch.h: New file.
	* ia32/l4/bits/stubs-init.h (__L4_SETUP_SYSCALL_X): New macro.
	(__L4_SETUP_SYSCALL): Implement using __L4_SETUP_SYSCALL_X.
	(l4_init_stubs): Setup set_gs0 syscall stub.
	* ia32/l4/bits/syscall.h (_L4_set_gs0): New function.
	* ia32/l4/bits/stubs.h (__l4_set_gs0): New prototype.
	* l4/arch.h: New file.
	* l4/kip.h (struct _L4_kip): New members _pad5, arch0, arch1,
	arch2 and arch3.
	* headers.m4: Add arch.h, bits/arch.h, bits/compat/arch.h,
	bits/gnu/arch.h.
	* l4.h: Include l4/arch.h.
	* Makefile.am: Add arch.h.
	* ia32/l4/bits/vregs.h (_L4_utcb): Use %gs:4, not %gs:0.

2005-01-06  Neal H. Walfield  <neal@gnu.org>

	* ia32/l4/bits/syscall.h (_L4_unmap): Fix register assignments.
	Return mr0.
	
2004-10-28  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/thread.h (L4_THREAD_VERSION_VALID): New macro.

	* l4/gnu/types.h: Include <stdbool.h>.
	* l4/gnu/ipc.h (l4_is_msg_tag_equal, l4_is_msg_tag_not_equal) 
	(l4_is_map_item, l4_is_grant_item, l4_is_string_item) 
	(l4_compound_string, l4_has_string_items, l4_has_map_grant_items) 
	(l4_ipc_succeeded, l4_ipc_failed, l4_ipc_propagated) 
	(l4_ipc_redirected, l4_ipc_xcpu): Change return type to bool.
	* l4/gnu/kip.h (l4_is_memory_desc_virtual): Likewise.
	* l4/gnu/schedule.h (l4_is_time_shorter, l4_is_time_equal) 
	(l4_is_time_not_equal, l4_enable_preemption_fault_exception) 
	(l4_disable_preemption_fault_exception, l4_enable_preemption) 
	(l4_disable_preemption, l4_preemptionpending): Likewise.
	* l4/gnu/space.h (l4_is_nil_fpage, l4_was_referenced) 
	(l4_was_written, l4_was_executed): Likewise.
	* l4/gnu/thread.h (l4_is_thread_equal, l4_is_thread_not_equal) 
	(l4_same_threads, l4_is_nil_thread, l4_is_local_id) 
	(l4_is_global_id): Likewise.
